feat(attachments): handle MinIO put & get PSUs
