# src/main/modules/attachment/infrastructure/adapters/mappers/attachment.entity.mapper.ts
@@ -26,6 +26,7 @@ export class AttachmentEntityMapper extends AbstractMapper<
       videos: entity.videos,
       modules: entity.modules,
       url: entity.url,
+      extension: entity.extension,
       title: entity.title,
       description: entity.description
     });
