# src/main/modules/attachment/infrastructure/adapters/repositories/entities/attachment.entity.ts
@@ -25,6 +25,9 @@ export class AttachmentEntity {
   modules?: string[];
 
   @Prop()
+  extension?: string;
+
+  @Prop()
   url?: string;
 
   @Prop()
